Fix word wrap

--- a/frontend/src/components/Poem/Poem.css
+++ b/frontend/src/components/Poem/Poem.css
@@ -2,6 +2,6 @@
 }
 
 .Poem__text {
-  white-space: pre;
+  white-space: pre-wrap;
   font-family: PT Serif, serif;
 }
